Loqate/main/default/objects/Setting__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <description>The identifier for the account.</description>
    <label>Account Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>