Loqate/main/default/objects/Setting__c/fields/BACS_Validation__c.field-meta.xml
<CustomField>
    <fullName>BACS_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow the use of BACS data to validate UK bank account details.</inlineHelpText>
    <label>Payment Validation</label>
    <type>Checkbox</type>
</CustomField>