Loqate/main/default/objects/Setting__c/fields/Click_License__c.field-meta.xml
<CustomField>
    <fullName>Click_License__c</fullName>
    <inlineHelpText>Your Postcode Anywhere Key suitable for internal web service transactions. It should be in the format AA11-AA11-AA11-AA11.</inlineHelpText>
    <label>Key</label>
    <length>19</length>
    <type>Text</type>
</CustomField>