Loqate/main/default/objects/Setting__c/fields/Country_Name_Style__c.field-meta.xml
<CustomField>
    <fullName>Country_Name_Style__c</fullName>
    <inlineHelpText>Change how country names are saved, either the full name (United States of America, Canada, United Kingdom), the ISO3 code (USA, CAN, GBR) or the ISO2 code (US, CA, GB) can be selected.</inlineHelpText>
    <label>Country Name Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Country Name (default)</fullName>
                <default>true</default>
                <label>Full Country Name (default)</label>
            </value>
            <value>
                <fullName>3 Character ISO Code</fullName>
            </value>
            <value>
                <fullName>2 Character ISO Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>