Loqate/main/default/objects/Setting__c/fields/Default_User_Country__c.field-meta.xml
<CustomField>
    <fullName>Default_User_Country__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected the control will attempt to use the user country as the default</inlineHelpText>
    <label>Default User Country</label>
    <type>Checkbox</type>
</CustomField>