Loqate/main/default/objects/Setting__c/fields/Disable_City_Search__c.field-meta.xml
<CustomField>
    <fullName>Disable_City_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked the control will not show the search dialogue for the city field</inlineHelpText>
    <label>Disable City Search</label>
    <type>Checkbox</type>
</CustomField>