Loqate/main/default/objects/Setting__c/fields/Disable_Company_Search__c.field-meta.xml
<CustomField>
    <fullName>Disable_Company_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked the control will not show the search dialogue for the company field</inlineHelpText>
    <label>Disable Company Search</label>
    <type>Checkbox</type>
</CustomField>