Loqate/main/default/objects/Setting__c/fields/Disable_Country_List__c.field-meta.xml
<CustomField>
    <fullName>Disable_Country_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked the app will not replace the standard country field with a picklist. Choose this option if you wish to use your own picklist.</inlineHelpText>
    <label>Disable Country List</label>
    <type>Checkbox</type>
</CustomField>