Loqate/main/default/objects/Setting__c/fields/Disable_Field_Rearrange__c.field-meta.xml
<CustomField>
    <fullName>Disable_Field_Rearrange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked the app will not rearrange standard address fields. Custom address fields will not be rearranged regardless of this setting, and should be arranged manually for address lookup.</inlineHelpText>
    <label>Disable Standard Field Rearrange</label>
    <type>Checkbox</type>
</CustomField>