Loqate/main/default/objects/Setting__c/fields/Disable_Other_Country_Option__c.field-meta.xml
<CustomField>
    <fullName>Disable_Other_Country_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked the app will not add an &apos;Other&apos; option to the country list. The &apos;Other&apos; option is used to enter a free text country name when the desired country does not appear in the list.</inlineHelpText>
    <label>Disable Other Country Option</label>
    <type>Checkbox</type>
</CustomField>