Loqate/main/default/objects/Setting__c/fields/Disable_Postcode_Search__c.field-meta.xml
<CustomField>
    <fullName>Disable_Postcode_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the control will not show the search dialogue for the zip / postalcode field</inlineHelpText>
    <label>Disable Postcode Search</label>
    <type>Checkbox</type>
</CustomField>