Loqate/main/default/objects/Setting__c/fields/Disable_State_Search__c.field-meta.xml
<CustomField>
    <fullName>Disable_State_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked the control will not show the search dialogue for the state / province field</inlineHelpText>
    <label>Disable State Search</label>
    <type>Checkbox</type>
</CustomField>