Loqate/main/default/objects/Setting__c/fields/Disable_Street_Search__c.field-meta.xml
<CustomField>
    <fullName>Disable_Street_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the control will not show the search dialogue for the street field</inlineHelpText>
    <label>Disable Street Search</label>
    <type>Checkbox</type>
</CustomField>