Loqate/main/default/objects/Setting__c/fields/Email_Validation__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow the use of advanced email validation which checks for the mail exchanger (MX) records of the responsible email server to catch spelling mistakes and incorrect domains.</inlineHelpText>
    <label>Email Validation</label>
    <type>Checkbox</type>
</CustomField>