Loqate/main/default/objects/Setting__c/fields/Hide_Sidebar_Component__c.field-meta.xml
<CustomField>
    <fullName>Hide_Sidebar_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecting this option will hide the Postcode Anywhere sidebar component while allowing the app to still function on edit pages.</inlineHelpText>
    <label>Hide Sidebar Component</label>
    <type>Checkbox</type>
</CustomField>