Loqate/main/default/objects/Setting__c/fields/Royal_Mail_Company__c.field-meta.xml
<CustomField>
    <fullName>Royal_Mail_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the company field specified in the address integration will be updated with the company name from the Royal Mail record.</inlineHelpText>
    <label>Royal Mail Update Company</label>
    <type>Checkbox</type>
</CustomField>