Loqate/main/default/objects/Setting__c/fields/Royal_Mail_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Royal_Mail_Reverse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable reverse lookups so that company or partial addresses can be used to search for address records rather than just postcode. This can be used by filling out the company name or partial address and clicking &apos;Find&apos;.</inlineHelpText>
    <label>Royal Mail Reverse Lookup</label>
    <type>Checkbox</type>
</CustomField>