Loqate/main/default/objects/Setting__c/fields/Use_Business_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_Business_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable Dun &amp; Bradstreet business data searches. This will add a Postcode Anywhere icon next to the company name field specified in the business integration record to initiate the search.</inlineHelpText>
    <label>Business Data</label>
    <type>Checkbox</type>
</CustomField>