Loqate/main/default/objects/Setting__c/fields/Use_Hierarchy_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_Hierarchy_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable hierarchy data to imported for Dun &amp; Bradstreet business data records. This includes parent DUNS, global ultimate DUNS and domestic DUNS for building account hierarchies.</inlineHelpText>
    <label>Business Hierarchy Data</label>
    <type>Checkbox</type>
</CustomField>