Loqate/main/default/objects/Setting__c/fields/Use_International_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_International_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allow the system to use International address data for searches.</inlineHelpText>
    <label>International Searches</label>
    <type>Checkbox</type>
</CustomField>