Loqate/main/default/objects/Setting__c/fields/Use_Royal_Mail_UK_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_Royal_Mail_UK_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow the system to use the more accurate Royal Mail Postcode Address data for UK searches.</inlineHelpText>
    <label>Royal Mail Searches</label>
    <type>Checkbox</type>
</CustomField>