Loqate/main/default/objects/Setting__c/fields/Use_USPS_Data__c.field-meta.xml
<CustomField>
    <fullName>Use_USPS_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow the system to use the more accurate USPS data for US searches.</inlineHelpText>
    <label>USPS Searches</label>
    <type>Checkbox</type>
</CustomField>