Loqate/main/default/objects/Setting__c/fields/User_License__c.field-meta.xml
<CustomField>
    <fullName>User_License__c</fullName>
    <inlineHelpText>Your Postcode Anywhere Key suitable for Royal Mail transactions (required if Royal Mail Searches are selected). It should be in the format AA11-AA11-AA11-AA11. If you are unsure or use internal credits then use your standard key here as well.</inlineHelpText>
    <label>Royal Mail Key (UK Only)</label>
    <length>19</length>
    <type>Text</type>
</CustomField>