Loqate/main/default/objects/Setting__c/fields/USPS_Reverse__c.field-meta.xml
<CustomField>
    <fullName>USPS_Reverse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable reverse lookups so that company and partial addresses can be used to search for address records rather than just zip code. This can be used by filling out a partial address and clicking &apos;Find&apos;.</inlineHelpText>
    <label>USPS Reverse Lookup</label>
    <type>Checkbox</type>
</CustomField>